--- a/test/fixtures/matches.yml
+++ b/test/fixtures/matches.yml
@@ -4,9 +4,10 @@
 #
 #  id           :bigint           not null, primary key
 #  post_comment :string
-#  user_id      :bigint           not null
 #  created_at   :datetime         not null
 #  updated_at   :datetime         not null
+#  user2_id     :integer
+#  user1_id     :integer
 #
 
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
